--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,1 +1,4 @@
-<p>todos works!</p>
+
+<div *ngFor="let todo of todos">
+    <app-todo-item [todo]="todo" (todoDelete)="deletetodo($event)"></app-todo-item> 
+</div>
